AFS_Dev/src/objects/Percentage_Value__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Service_Group_Name__c</fullName>
        <label>Service Group Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Name_del__c</fullName>
        <label>Split Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <label>Split Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Percentage Value</label>
</CustomObject>